# md2html

./: .gitignore  LICENSE  README.md  __main__.py  md2html.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_md2html.py
